--- a/styles/main.css
+++ b/styles/main.css
@@ -471,6 +471,11 @@ body {
     margin-top: 100px;
 }
 
+.map iframe {
+    width: 100%;
+    height: 100%;
+}
+
 /* Form */
 .form-content {
     padding: 6% 0;
